--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="top">
+    <header id="header">
       <h1>Prework Study Guide</h1>
       <img 
         src="./assets/bowtie-cat.png" 
